--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Browse, sort, and book after-school classes. Built with Vue, Bootstrap, and a Node.js backend.">
+    <meta property="og:title" content="After-School Classes Booking System">
+    <meta property="og:description" content="Browse, sort, and book after-school classes.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sworup33.github.io/After-School_Classes_Booking_System-Frontend/">
     <title>After-School Classes Booking System</title>
     
     <!-- Bootstrap CSS -->
