--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="https://after-school-classes-booking-system.onrender.com/images/math.jpg">
 </head>
 <body>
     <div id="app"></div>
