chore(index): add canonical link for SEO

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="Browse, sort, and book after-school classes.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sworup33.github.io/After-School_Classes_Booking_System-Frontend/">
+    <link rel="canonical" href="https://sworup33.github.io/After-School_Classes_Booking_System-Frontend/"/>
     <title>After-School Classes Booking System</title>
     
     <!-- Bootstrap CSS -->
